--- a/style.css
+++ b/style.css
@@ -28,9 +28,45 @@ h3{
 }
 .link-button{
     text-decoration: none;
-    background-image: linear-gradient(60deg, rgb(240, 232, 232), #f78566);
+    background-image: linear-gradient(60deg, rgb(224, 211, 211), #f78566);
     color: white;
     font-weight: 700;
     padding: 10px 25px;
     border-radius: 5px;
 }
+
+
+/* about section */
+    .about-section{
+        margin-top: 100px;
+        background-image: url("images/dream-bg.png");
+        background-repeat: no-repeat;
+        background-position: right;
+    }
+    .about-info{
+        width: 40%;
+        float: left;
+        margin-left: 4%;
+    }
+    .about-info-right{
+        width: 40%;
+        float: left;
+        margin-left: 5%;
+        height: 400px;
+        padding: 70px 0;
+    }
+    .about-info img{
+        width: 100%;
+    }
+    h4{
+        font-size: 21px;
+        font-weight: 600;
+    }
+    .about-info-title{
+        font-size: 45px;
+    }
+    p{
+        color: #6d6969;
+    }
+
+/* about section */
