added a about section

--- a/style.css
+++ b/style.css
@@ -3,25 +3,30 @@ margin: 0;
 padding: 0;
 font-family: 'Roboto Slab', serif;
 }
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+/* header section */
 h1{
-    font-size: 55px;
+    font-size: 60px;
 }
 .name-highlight{
-    color: #f78566;
+    color: orange;
 }
 h3{
     font-size: 21px;
 }
-.header-info{
+.half-width{
     width: 40%;
     float: left;
     margin-left: 5%;
     padding-left: 2%;
 }
-.header-info img{
+.half-width img{
     width: 100%;
 }
-.header-section{
+.header-banner{
     background-image: url("images/top-banner.png");
     height: 500px;
     background-repeat: no-repeat;
@@ -34,39 +39,18 @@ h3{
     padding: 10px 25px;
     border-radius: 5px;
 }
+/* header section */
 
 
 /* about section */
-    .about-section{
-        margin-top: 100px;
-        background-image: url("images/dream-bg.png");
+    .dream-area{
+        background: url("images/dream-bg.png");
         background-repeat: no-repeat;
         background-position: right;
+        
     }
-    .about-info{
-        width: 40%;
-        float: left;
-        margin-left: 4%;
-    }
-    .about-info-right{
-        width: 40%;
-        float: left;
-        margin-left: 5%;
-        height: 400px;
-        padding: 70px 0;
-    }
-    .about-info img{
-        width: 100%;
-    }
-    h4{
-        font-size: 21px;
-        font-weight: 600;
-    }
-    .about-info-title{
-        font-size: 45px;
-    }
-    p{
-        color: #6d6969;
+    h2{
+        font-size: 50px;
     }
 
 /* about section */
