--- a/style.css
+++ b/style.css
@@ -7,11 +7,14 @@ section{
     height: 500px;
     padding-bottom: 150px;
 }
+p{
+    color: dimgray;
+}
 /* header section */
 h1{
-    font-size: 60px;
+    font-size: 55px;
 }
-.name-highlight{
+.orange-highlight{
     color: orange;
 }
 h3{
@@ -50,7 +53,38 @@ h3{
         
     }
     h2{
-        font-size: 50px;
+        font-size: 40px;
     }
 
 /* about section */
+
+/* Experience Section */
+    .experiences-area{
+        background-image: url("images/exp-bg.png");
+        background-repeat: no-repeat;
+        background-position: left;
+    }
+    .experiences-area div{
+        box-shadow: 10px 10px 40px gray;
+        height: 80%;
+        border-radius: 5px;
+        background-color: #fff;
+    }
+    #full-stack{
+        border-left: 10px solid;
+        border-image: linear-gradient(180deg, lightsalmon, tomato);
+        border-image-slice: 1;
+    }
+    #baby{
+        border-left: 10px solid;
+        border-image: linear-gradient(180deg, blue, cyan);
+        border-image-slice: 1;
+    }
+    footer p{
+        text-align: center;
+        font-size: 14px;
+    }
+    .footer-hover{
+        color: orange;
+    }
+/* Experience Section */
